aggiunto cambiamento opacita' ad interfaccia

--- a/pages/index.html
+++ b/pages/index.html
@@ -223,6 +223,7 @@ menuBar5.init();
 <!-- Fine interfaccia -->
 <!-- Inizio Parte Dialog Colori-->
 <div id="colorDialog" class="flora" title="Modifica colori">
+        <p> Opacit&agrave;: <input type="text" id="borderOp" size="5"/> </p>
 	<p>Bordo:   
 		<span id="borderColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<input type="button" id="setBorderCol" value="Cambia" />
@@ -240,6 +241,7 @@ menuBar5.init();
                 
 	</form>	
 	<!-- Seconda ruota -->
+        <p> Opacit&agrave;: <input type="text" id="fillOp" size="5"/> </p>
 	<p>Riemp.:  
 		<span id="fillColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
 		<span><input type="button" id="setFillCol" value="Cambia" /></span>
