allTests.html: corretto per opacita'

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -43,6 +43,8 @@ runGuiTest();
  <div style="display:none" id="DialogWidth"></div>
  <div style="display:none" id="color1"></div>
  <div style="display:none" id="color2"></div>
+ <div style="display:none" id="fillOp"></div>
+ <div style="display:none" id="borderOp"></div>
  <div id="edgeNumber" style="display: none"></div> 
  <div id="fontTypeButton" style="display: none"></div> 
 
