--- a/pages/index.html
+++ b/pages/index.html
@@ -223,10 +223,11 @@ menuBar5.init();
 <!-- Fine interfaccia -->
 <!-- Inizio Parte Dialog Colori-->
 <div id="colorDialog" class="flora" title="Modifica colori">
-        <p> Opacit&agrave;: <input type="text" id="borderOp" size="5"/> </p>
+  
 	<p>Bordo:   
 		<span id="borderColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<input type="button" id="setBorderCol" value="Cambia" />
+		 <p style="margin-top:-0.5em"> Opacit&agrave;: <input type="text" id="borderOp" size="5" value="1"/> </p>
 		<div id="divBorderCol" >
 			<input type="button" id="changeBorderCol" name="ChangeCol" value="Cambia Colore Bordo"/>
 		</div>
@@ -241,10 +242,11 @@ menuBar5.init();
                 
 	</form>	
 	<!-- Seconda ruota -->
-        <p> Opacit&agrave;: <input type="text" id="fillOp" size="5"/> </p>
+       
 	<p>Riemp.:  
 		<span id="fillColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
 		<span><input type="button" id="setFillCol" value="Cambia" /></span>
+		 <p style="margin-top:-0.5em"> Opacit&agrave;: <input type="text" id="fillOp" size="5"value="1" /> </p>
 		<div id="divFillCol">
 			<input type="button" id="changeFillCol" name="ChangeCol" value="Cambia Colore Riemp."/>
 		</div>
