messo logo sotto pages/images

--- a/pages/index.html
+++ b/pages/index.html
@@ -319,7 +319,7 @@ menuBar5.init();
 	<p id="aboutDialog"  class="flora" title="About:">
 		<span id="aboutSpan" style="display:none">
 			<h1 style="text-align:center" >AJAXDRAW</h1><br/>			
-			<img  src="../doc/logo/logo.png" width="269" height="135" name="Logo" alt="Logo WebShape" />
+			<img  src="images/logo.png" width="269" height="135" name="Logo" alt="Logo WebShape" />
 		</span>		
 	</p>
 </body>
