MU: mod.ortografiche, dettagli codice

--- a/pages/index.html
+++ b/pages/index.html
@@ -77,7 +77,7 @@
 								$("#colorDialog").dialog({
 									position: ["right","top"],
 									title: "Modifica Colori",
-    								height: 190,
+    								height: 260,
     								width: 230,
 									resizable: false,
     								dialogClass: "Dialog1"
@@ -87,8 +87,10 @@
 								 $("#propertiesDialog").dialog({
 									title: "Modifica Attributi",
     								position: "right",
+    								resizable: false,
     								width: 230,
-									height: 210
+									height: 210,
+									dialogClass: "Dialog2"
   									  });' id="500015"><a href="#">Proprieta'</a>
   			</li>
 		</ul>
