MU:quasi finito

--- a/pages/index.html
+++ b/pages/index.html
@@ -228,7 +228,7 @@ menuBar5.init();
   
 	<p>Bordo:   
 		<span id="borderColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<input type="button" id="setBorderCol" value="Cambia" />
+		<input type="button" id="setBorderCol" title="Cambia il colore del bordo della figura selezionata" value="Cambia" />
 		 <p style="margin-top:-0.5em"> Opacit&agrave;: <input type="text" id="borderOp" size="5" value="1"/> </p>
 		<div id="divBorderCol" >
 			<input type="button" id="changeBorderCol" name="ChangeCol" value="Cambia Colore Bordo"/>
@@ -247,7 +247,7 @@ menuBar5.init();
        
 	<p>Riemp.:  
 		<span id="fillColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
-		<span><input type="button" id="setFillCol" value="Cambia" /></span>
+		<span title="Cambia il colore di riempimento della figura selezionata"><input type="button" id="setFillCol" title="Cambia il colore di riempimento della figura selezionata"value="Cambia" /></span>
 		 <p style="margin-top:-0.5em"> Opacit&agrave;: <input type="text" id="fillOp" size="5"value="1" /> </p>
 		<div id="divFillCol">
 			<input type="button" id="changeFillCol" name="ChangeCol" value="Cambia Colore Riemp."/>
