--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" title="mozilla" type="text/css" href="../styles/style.css"/>
 <link rel="alternate stylesheet" title="opera" type="text/css" href="../styles/opera.css"/>
 <link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
-<link rel="alternate stylesheet" title="msie" type="text/css" href="../styles/msie.css"/>
+<link rel="alternate stylesheet" title="msie7" type="text/css" href="../styles/msie7.css"/>
+<link rel="alternate stylesheet" title="msie8" type="text/css" href="../styles/msie8.css"/>
 <link rel="alternate stylesheet" title="konqueror" type="text/css" href="../styles/konqueror.css"/>
 <link rel="alternate stylesheet" title="chrome" type="text/css" href="../styles/chrome.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/jquery.tooltip.css" />
