--- a/src/test/draw3.html
+++ b/src/test/draw3.html
@@ -13,7 +13,7 @@
 
 $(document).ready(function(){
 var canvas = document.getElementById("cv");
-var doc = "svg.svg";
+var doc = "test.svg";
 var b = [];
 r = new SVGReader();
 b = (r.read(doc));
