DP: aggiunto diag. classi dei pulsanti e piccole mod.

--- a/pages/index.html
+++ b/pages/index.html
@@ -205,6 +205,7 @@ menuBar5.init();
 		</span>
 
 	</div>
+
 </div>
 
 
@@ -306,6 +307,7 @@ menuBar5.init();
 			<img src="images/logo.png" width="269" height="135" alt="Logo WebShape" />
 		</span>		
 	</p>
+		<pre style="margin-left:3.5em;display:none" id="saveDestination">  </pre>
 </body>
 </html>
 
