Index.html -> textarea salvataggio

--- a/pages/index.html
+++ b/pages/index.html
@@ -307,7 +307,7 @@ menuBar5.init();
 			<img src="images/logo.png" width="269" height="135" alt="Logo WebShape" />
 		</span>		
 	</p>
-		<pre style="margin-left:3.5em;display:none" id="saveDestination">  </pre>
+	<textarea style="margin-left:3.5em;display:none" id="saveDestination"></textarea>
 </body>
 </html>
 
