rimosso bottone 'chiudi'

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@
 													title: "Carica da file SVG",
 													modal: true,
     												height: 110,
-    												width: 470,
+    												width: 350,
 													resizable: false,
     												dialogClass: "loadDialog1"
 								   			});' id="500003"><a href="#">Apri</a></li>
@@ -294,8 +294,7 @@ menuBar5.init();
 	<div id="loadDialog" style="display:none" class="flora" title="Carica file SVG:">
 		<form id="MyForm" name="MyForm" method="post" action="Request" enctype="multipart/form-data" target="my_iframe">
 			<input name="my_file" type="file">
-			<input type="submit" name="salva" value="Carica" id="loadButton">&nbsp;&nbsp;
-			<input type="button" value="Chiudi" id="loadButton2">
+			<input type="submit" name="salva" value="Carica" id="loadButton">
 		</form>		
 		
 	</div>
