--- a/public_html/index.html
+++ b/public_html/index.html
@@ -277,6 +277,12 @@ menuBar5.init();
 		</select>
 		<input id="submitFont" type="button" value="Cambia" />
 	</p>
+       <p id="rotationSetterZone" style="display:none">
+      <span id="rotationTitle"> Rotazione:</span>	<br/>
+	Gradi:
+		<input id="rotationNumber" type="text" maxlength="3" size="6" value="0"/>
+      <input id="submitRotation" type="button" value="Ruota" />
+	</p>
 	
 </div>
 <!-- Dialog di salvataggio -->
