tolto bind dopo figura deselezionata

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -299,8 +299,8 @@ menuBar5.init();
 	<!-- Dialog di caricamento -->
 	<div id="loadDialog" style="display:none" class="flora" title="Carica file SVG:">
 		<form id="MyForm" name="MyForm" method="post" action="Request" enctype="multipart/form-data" target="my_iframe">
-			<input name="my_file" type="file">
-			<input type="submit" name="salva" value="Carica" id="loadButton">
+			<input name="my_file" type="file"/>
+			<input type="submit" name="salva" value="Carica" id="loadButton"/>
 		</form>		
 		
 	</div>
