messo MU in html sotto public_html, sistemato indice

--- a/public_html/help/index.html
+++ b/public_html/help/index.html
@@ -36,10 +36,7 @@
                 <p><a name="intro"><strong>AJAXDRAW</strong></a>, “Software per il disegno grafico in tecnologie web”, è un software per il disegno grafico vettoriale sviluppato per il web.
                         E' stato sviluppato dal gruppo WebShape che intende indirizzarne l' utilizzo a tutti gli utenti in possesso di una connessione internet.</p>
                         <p>Attraverso questa guida si cercherà di facilitare l'utilizzo del software e di aiutare l'utente a sfruttarne le piene potenzialità, diradando eventuali dubbi sul suo funzionamento anche attraverso esempi e schermate illustrative.</p>
-                        <strong>Installazione:</strong><br/>
-                        <p>La sezione Installazione guiderà l'utente attraverso il processo di installazione dell'applicazione nella propria macchina, illustrando i passi della procedura ed i requisiti minimi richiesti dal sistema.</p>
-                        <strong>FAQ:</strong><br/>
-                        <p>Le FAQ (Frequently Asked Questions) verranno incontro a chi nutrisse incertezze sul corretto utilizzo dell'applicazione o di qualche sua componente, elencando una serie di interrogativi plausibili soprattutto per chi non trovasse di immediata comprensione l'interfaccia messa a disposizione. </p>
+
                 <p class="Stile1"><a name="interf">Interfaccia</a></p>
                 <p> Questa sezione descrive l'interfaccia dell'applicazione </p>
                 <p> In cima alla pagina &egrave; presente il menu dell'applicazione, che permette di 
@@ -67,7 +64,7 @@
                 al riempimento di una figura a seconda del valore corrente del menu a tendina a destra 
                 della tavolozza. </p>
                 
-                <p class="Stile1" style="margin-top:100px"><a name="panoramica">Il Menu</a></p>
+                <p class="Stile1" style="margin-top:100px"><a name="il_menu">Il Menu</a></p>
 <p>
   Il programma dispone di un menu a tendina nella parte alta dell'interfaccia grafica.</p>
 <p>Figura 1: menu a tendina </p>
@@ -163,7 +160,7 @@ La fine della retta e' determinata dal rilascio del mouse.
   a destra per settare il testo dell'etichetta e il font.
 <p>
 <p>
-<p class="Stile1"> Bottoni e Dialog
+<p class="Stile1"> <a name="i_dialog">Bottoni e Dialog</a>
 
 <p>Figura 10: <strong>Zoom</strong>
 <p><img src="images/zoom_piu.png" alt="" align="middle" />
@@ -226,7 +223,7 @@ Nel caso in cui su voglia cambiare il colore di un oggetto gia' disegnato e sele
 <p>
 <p>
 
-<p class="Stile1">Messaggi di errore e loro significato
+<p class="Stile1"><a name="gli_errori">Messaggi di errore e loro significato</a>
 <p>Durante l'utilizzo del programma e' possibile che vengano segnalati i seguenti errori:<br>
 - Errore di parsing durante il caricamento di un file SVG: significa che il file SVG caricato non e' valido<br>
 - Errore di comunicazione col server: il server non e' al momento raggiungibile. Riprovare piu' tardi, e se il problema persiste controllare lo stato della propria connessione ad internet. Se la connessione e' funzionante, contattare l'amministratore del server.<br>
@@ -246,9 +243,11 @@ Nel caso in cui su voglia cambiare il colore di un oggetto gia' disegnato e sele
 				<h2>Sezioni</h2>
 				<ul>
 					<li><a href="#intro">Introduzione</a></li>
-					<li><a href="#interf">Avvio</a></li>
-					<li><a href="#panoramica">Panoramica</a></li>
-				</ul>
+					<li><a href="#interf">Panoramica</a></li>
+					<li><a href="#il_menu">Il menu</a></li>
+                                        <li><a href="#i_dialog">Bottoni e dialog</a></li>
+                                        <li><a href="#gli_errori">Messaggi di errore</a></li>
+                                      </ul>
 			</li>
 		</ul>
 	</div>
