--- a/public_html/index.html
+++ b/public_html/index.html
@@ -100,7 +100,7 @@
 	<li id="50003"><a href="#">Guida</a> 
 			<ul style="width:160px">
 				<li id="40000" itemIcon="images/menu_bar/guida.gif" 
-				jsFunction="window.open('../doc/ManualeUtente/help/index.html')"><a href="#">Manuale</a>				
+				jsFunction="window.open('help/index.html')"><a href="#">Manuale</a>				
 				<li itemIcon="images/menu_bar/info.gif" jsFunction='$("#aboutDialog").css({"display" : "block"});
 							$("#aboutSpan").css({"display" : "block"});
 										$("#aboutDialog").dialog({
