--- a/public_html/index.html
+++ b/public_html/index.html
@@ -207,9 +207,9 @@ menuBar5.init();
 <!-- Fine interfaccia -->
 <!-- Inizio Parte Dialog Colori-->
 <div id="colorDialog" class="flora" title="Modifica colori">  
-	<p>Bordo:   
+	<p id="borderPart">Bordo:   
 		<span id="borderColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-		<input type="button" id="setBorderCol" value="Cambia" />
+		<span><input type="button" id="setBorderCol" value="Cambia" /></span>
 		<p id="opBorder"> Opacit&agrave;: <input type="text" id="borderOp" size="5" value="1"/> </p>
 		<div id="divBorderCol" >
 			<input type="button" id="changeBorderCol" name="ChangeCol" value="Cambia Colore Bordo"/>
@@ -218,13 +218,13 @@ menuBar5.init();
 	<!-- Farbtastic $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ -->
 	<form id="colorx" >
   		<div class="form-item" >
-  			<label for="color">Color:</label>
+  			<label for="color">Colore:</label>
   			<input type="text" id="color1" name="color1" value="#123456" />
   		</div>
   		<div id="picker1"></div>               
 	</form>	
 	<!-- Seconda ruota -->      
-	<p>Riemp.:  
+	<p id="fillPart" >Riemp.:  
 		<span id="fillColorNow" style="background-color: #000000">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
 		<span><input type="button" id="setFillCol" value="Cambia" /></span>
 		 <p id="opFill"> Opacit&agrave;: <input type="text" id="fillOp" size="5" value="1" /> </p>
@@ -234,7 +234,7 @@ menuBar5.init();
 	</p>
 	<form id="colory">
   		<div class="form-item" >
-  			<label for="color">Color:</label>
+  			<label for="color">Colore:</label>
   			<input type="text" id="color2" name="color2" value="#123456" />
   		</div>
   		<div id="picker2"></div>
