--- a/public_html/index.html
+++ b/public_html/index.html
@@ -253,7 +253,7 @@ menuBar5.init();
 		A:&nbsp;<input id="DialogHeight" type="text" size="2" value=" " />px &nbsp; / &nbsp;	   
 		X:&nbsp;<input id="x" type="text" size="2" value=" " />
 	</p>
-	<p>
+	<p id="prova5">
 		L:&nbsp;<input id="DialogWidth" type="text" size="2" value=" " />px  &nbsp; / &nbsp;
 		Y:&nbsp;<input id="y" type="text" size="2"/>
 	</p>
